# credit-card-fraud

./: .gitignore  Dockerfile  LICENSE  README.md  change_project_attributes.py  pyproject.toml  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: build_dist.yml  docs.yml  tests.yml
data/: README.md  create_dummy_dataset.py  data_preping.py
docker_files/: build_image_and_run.py  docker_entrypoint.sh
notebooks/: notebook.ipynb
service/: build_gold_dataset.py  build_silver_dataset.py
sphinx/: generate_doc.py
sphinx/source/: conf.py  index.rst  modules.rst
src/python_template/: __init__.py  __main__.py
tests/: __init__.py  configs.py  test_dummy.py
tests/data/: test_data_preping.py
